dist/LineScript-win64-20260616/tests/cases/compile_fail/np_bad_types.lsc
main() -> i64 do
  declare x = np_get("bad", 0)
  println(x)
  return 0
end
